objects/SME_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeSMEAppr__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeSMEAppr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Record_ID__r.Account.Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Implementation_Record_ID__r.AccountLegalName__c</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_SME_Area_needs_to_review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional SME Area Needs To Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approvers_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approvers Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Implementer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Claims_System__c</fullName>
        <formula>TEXT( Implementation_Record_ID__r.Quote.GroupNumber__r.ClaimSystem__c )</formula>
        <label>Claims System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Approvers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Approvers</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Implementation_Record_ID__r.Quote.GroupNumber__c , Implementation_Record_ID__r.Quote.GroupNumber__r.Name ,&quot;_blank&quot;)</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>TEXT(Implementation_Record_ID__r.Account.Group_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Implementation_Record_ID__r.Account.HQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICHyperLink__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp;Implementation_Record_ID__c, Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICHyperLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPL_Case__c</fullName>
        <formula>Implementation_Record_ID__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMPL Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_List_Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, List Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imp_Case_Created_Date__c</fullName>
        <formula>Implementation_Record_ID__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Imp Case Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Imp_Case_Last_Modified_By__c</fullName>
        <formula>Implementation_Record_ID__r.LastModifiedBy.LastName  &amp; &quot;, &quot; &amp;  Implementation_Record_ID__r.LastModifiedBy.FirstName</formula>
        <label>Imp Case Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_To_HPCC_Prior_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impact To HPCC Prior Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_to_HPCC__c</fullName>
        <label>Impact To HPCC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Cannot Determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impl_Case_Name__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Case_Name__c</formula>
        <label>Impl Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Implementation_Record_ID__c, Implementation_Record_ID__r.Implementation_Case_Name__c ,&quot;_blank&quot;)</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>SME_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <formula>text(Implementation_Record_ID__r.Implementation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>text(Implementation_Record_ID__r.Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intake_Type__c</fullName>
        <formula>IF(NOT(OR(Implementation_Record_ID__r.Intake_Type_Migration__c, Implementation_Record_ID__r.Intake_Type_Acquisition__c ,Implementation_Record_ID__r.Intake_Type_Change_To_Current_Renewal__c,
  Implementation_Record_ID__r.Intake_Type_Spin_Off__c ,Implementation_Record_ID__r.Intake_Type_Existing_Shift_to_JAA__c ,
  Implementation_Record_ID__r.Intake_Type_Existing_Shift_To_PEX__c, Implementation_Record_ID__r.Intake_Type_Transfer_Market_Segment__c,
  Implementation_Record_ID__r.Intake_Type_Group_Term__c , Implementation_Record_ID__r.Intake_Type_Retro__c )), NULL, 
SUBSTITUTE(IF( Implementation_Record_ID__r.Intake_Type_Migration__c,&quot;Migration,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Acquisition__c ,&quot;Acquisition,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Change_To_Current_Renewal__c ,&quot;Change To Current Renewal,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Spin_Off__c ,&quot;Spin Off,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Existing_Shift_to_JAA__c ,&quot;Existing Shift to JAA,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Existing_Shift_To_PEX__c ,&quot;Existing Shift to PEX,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Transfer_Market_Segment__c ,&quot;Transfer Market Segment,&quot; , NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Group_Term__c ,&quot;Group Term,&quot;,NULL) + 

IF( Implementation_Record_ID__r.Intake_Type_Retro__c ,&quot;Retro,&quot; , NULL)+&apos;.&apos;, &quot;,.&quot;,&quot; &quot;))</formula>
        <label>Intake Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Additional_SME_Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Of Additional SME Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>CASE(MOD( Initiated_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Approved_Date__c - Initiated_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Approved_Date__c - Initiated_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Approved_Date__c - Initiated_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Approved_Date__c - Initiated_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Approved_Date__c - Initiated_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Approved_Date__c - Initiated_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Approved_Date__c - Initiated_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Approved_Date__c- Initiated_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_time__c</fullName>
        <formula>CASE(MOD( Initiated_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Pending_Date__c  - Initiated_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Pending_Date__c  - Initiated_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Pending_Date__c - Initiated_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Pending_Date__c  - Initiated_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Pending_Date__c  - Initiated_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Pending_Date__c  - Initiated_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Pending_Date__c - Initiated_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Pending_Date__c - Initiated_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Value_Strings_Tables_Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Value Strings/Tables/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <formula>Implementation_Record_ID__r.Quote.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Implementation_Record_ID__r.Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Required_field_Prior_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Required field Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need finalized benefits</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancies</fullName>
                </value>
                <value>
                    <fullName>Documents not attached</fullName>
                </value>
                <value>
                    <fullName>Need additional paperwork/Incomplete paperwork</fullName>
                </value>
                <value>
                    <fullName>Rate clarification - incomplete rates</fullName>
                </value>
                <value>
                    <fullName>opportunity updates required</fullName>
                </value>
                <value>
                    <fullName>Mismatch documents</fullName>
                </value>
                <value>
                    <fullName>Mismatch effective date</fullName>
                </value>
                <value>
                    <fullName>Returne Requested by Sales/Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMEHy__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMEHyerLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMEHyerLink__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMEHyerLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Approval_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp; Id</formula>
        <label>SME Approval Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The User Who Modified The Stage / Approved The Implementation Case Record For This Department</inlineHelpText>
        <label>SME Approver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SME,SME Dual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SME_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Department__c</fullName>
        <label>SME Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Act Wise CDH</fullName>
                </value>
                <value>
                    <fullName>Act Wise FSA</fullName>
                </value>
                <value>
                    <fullName>Anthem Flex Hour</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>Benefit Booklets/Contracts</fullName>
                    <isActive>false</isActive>
                    <label>Benefit Booklets/Contracts</label>
                </value>
                <value>
                    <fullName>Blue Exchange (BX)</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>CCMU</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Claims Retro</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Coordinated Care Model</fullName>
                </value>
                <value>
                    <fullName>Coordination of Benefits</fullName>
                </value>
                <value>
                    <fullName>Data Interface Team (DIT)</fullName>
                </value>
                <value>
                    <fullName>DeCare</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>EBA</fullName>
                    <isActive>false</isActive>
                    <label>EBA</label>
                </value>
                <value>
                    <fullName>Enrollment and Billing (E/B)</fullName>
                </value>
                <value>
                    <fullName>Group Services</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness Solutions</fullName>
                </value>
                <value>
                    <fullName>HealthEquity/WageWorks/FSA/COBRA</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>IHM</fullName>
                </value>
                <value>
                    <fullName>Implementations</fullName>
                </value>
                <value>
                    <fullName>Interplan</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JAA/NTS</fullName>
                </value>
                <value>
                    <fullName>Life and Disability</fullName>
                </value>
                <value>
                    <fullName>LITES CDH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Support_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Support Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selections_Report_Required__c</fullName>
        <label>Selections Report Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Cannot Determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_End_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Start_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Initiated&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved for Castlight (EBA Only)</fullName>
                </value>
                <value>
                    <fullName>Approved with Deviations</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_check__c</fullName>
        <formula>(ISPICKVAL(Status__c, &apos;Pending&apos;)  || ISPICKVAL(Status__c, &apos;Approved with Deviations&apos;)  || ISPICKVAL(Status__c, &apos;Denied&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strings_Tables_Contract_Codes_Impacted__c</fullName>
        <label>Strings/Tables/Contract Codes Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Approve_Deny__c</fullName>
        <inlineHelpText>This Is How Long It Took The SME Approval Record To Change To Approved, Approved for Castlight, Approved with Deviations Or Denied</inlineHelpText>
        <label>Time to Approve/Deny</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Pend__c</fullName>
        <inlineHelpText>This Is How Long It Took The SME Approval Record To Change From Initiated To A Pending Status</inlineHelpText>
        <label>Time to Pend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>IF( Pending_Date__c &lt;&gt; Approved_Date__c , (Time_to_Approve_Deny__c + Time_to_Pend__c ), Time_to_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SME Approvals</label>
    <listViews>
        <fullName>Act_Wise_CDH</fullName>
        <booleanFilter>(1 OR 5 OR 6) AND (2 OR 4) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>SME_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claims_System__c</columns>
        <columns>Region__c</columns>
        <columns>Imp_Case_Last_Modified_By__c</columns>
        <columns>Imp_Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiated</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Act Wise CDH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Implementations Review</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Response from Sales/Account Management</value>
        </filters>
        <label>Act Wise CDH</label>
    </listViews>
    <listViews>
        <fullName>Act_Wise_FSA</fullName>
        <booleanFilter>(1 OR 5 OR 6) AND (2 OR 4) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>SME_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claims_System__c</columns>
        <columns>Region__c</columns>
        <columns>Imp_Case_Last_Modified_By__c</columns>
        <columns>Imp_Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiated</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Act Wise FSA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Implementations Review</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Response from Sales/Account Management</value>
        </filters>
        <label>Act Wise FSA</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Anthem_Flex_Hour</fullName>
        <booleanFilter>(1 OR 5 OR 6) AND (2 OR 4) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>SME_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claims_System__c</columns>
        <columns>Region__c</columns>
        <columns>Imp_Case_Last_Modified_By__c</columns>
        <columns>Imp_Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiated</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Anthem Flex Hour</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Implementations Review</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Response from Sales/Account Management</value>
        </filters>
        <label>Anthem Flex Hour</label>
    </listViews>
    <listViews>
        <fullName>Anthem_Health_Guide</fullName>
        <booleanFilter>(1 OR 4 OR 5) AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>SME_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claims_System__c</columns>
        <columns>Region__c</columns>
        <columns>Imp_Case_Last_Modified_By__c</columns>
        <columns>Imp_Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiated,Pending</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Anthem Health Guide</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Response from Sales/Account Management</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Implementations Review</value>
        </filters>
        <label>Anthem Health Guide</label>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklets_Contracts</fullName>
        <booleanFilter>(1 OR 5 OR 6) AND (2 OR 4) AND (3 OR 8) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>SME_Department__c</columns>
        <columns>Status__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claims_System__c</columns>
        <columns>Region__c</columns>
        <columns>Imp_Case_Last_Modified_By__c</columns>
        <columns>Imp_Case_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiated</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Benefit Booklets/Contracts</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Implementations Review</value>
        </filters>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Revision Pending Response from Sales/Account Management</value>
        </filters>
        <filters>
            <field>Group_Size__c</field>
            <operation>notEqual</operation>
            <value>51 - 99</value>
        </filters>
        <filters>
            <field>SME_Department__c</field>
            <operation>equals</operation>
            <value>Contracts</value>
        </filters>
        <label>Contracts</label>
    </listViews>
</CustomObject>